force-app/shared/config/objects/System_Setting__c/System_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Object to hold what types of messages to log and how long to keep them for</description>
    <label>System Setting</label>
</CustomObject>