force-app/shared/config/objects/System_Setting__c/fields/Debug__c.field-meta.xml
<CustomField>
    <fullName>Debug__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True- log debug messages in this org</description>
    <inlineHelpText>True- log debug messages in this org</inlineHelpText>
    <label>Debug</label>
    <type>Checkbox</type>
</CustomField>