force-app/shared/config/objects/System_Setting__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True- log error messages in this org</description>
    <inlineHelpText>True- log error messages in this org</inlineHelpText>
    <label>Error</label>
    <type>Checkbox</type>
</CustomField>