force-app/shared/config/objects/System_Setting__c/fields/Info__c.field-meta.xml
<CustomField>
    <fullName>Info__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True- log info messages in this org</description>
    <inlineHelpText>True- log info messages in this org</inlineHelpText>
    <label>Info</label>
    <type>Checkbox</type>
</CustomField>