force-app/shared/config/objects/System_Setting__c/fields/UsernameOrgPostfix__c.field-meta.xml
<CustomField>
    <fullName>UsernameOrgPostfix__c</fullName>
    <description>Postfix added to user email address which will be username i.e. cs.uat and John.Doe@nike.com.cs.uat</description>
    <label>Username Org Postfix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>