force-app/shared/config/objects/System_Setting__c/fields/Warning__c.field-meta.xml
<CustomField>
    <fullName>Warning__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True- log warning messages in this org</description>
    <inlineHelpText>True- log warning messages in this org</inlineHelpText>
    <label>Warning</label>
    <type>Checkbox</type>
</CustomField>